envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8888 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: default
                            max_grpc_timeout: 60s
                            retry_policy:
                              retry_on: "unavailable,deadline-exceeded,resource-exhausted"
                              num_retries: 5
                              per_try_timeout: 120s
                              host_selection_retry_max_attempts: 3
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: GET, PUT, POST, HEAD, OPTIONS
                        allow_headers: api-key,app-key,app-id,web-api-key,Authorization,Grpc-Metadata-api-key,Grpc-Metadata-app-key,Grpc-Metadata-app-id,Grpc-Metadata-web-api-key,Grpc-Metadata-Authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: grpc-status,grpc-message,Grpc-Trailer-App-Id
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: default
      connect_timeout: 60s
      type: LOGICAL_DNS
      dns_refresh_rate: 5s
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: default
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
